# sip-phone

./: CLAUDE.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/audio/: audio_engine.cpp  audio_engine.h
app/src/main/cpp/jni/: jni_bridge.cpp
app/src/main/cpp/rtp/: amr_rtp_payload.c  jitter_buffer.c  jitter_buffer.h  rtcp_handler.h  rtp_packet.c  rtp_session.c  rtp_session.h
app/src/main/java/com/telcobright/sipphone/: SipPhoneApplication.kt
app/src/main/java/com/telcobright/sipphone/call/: CallContext.kt  CallMachineFactory.kt
app/src/main/java/com/telcobright/sipphone/call/events/: CallEvents.kt
app/src/main/java/com/telcobright/sipphone/media/: AdaptiveBitrateController.kt  MediaSessionManager.kt  NativeMediaEngine.kt
app/src/main/java/com/telcobright/sipphone/service/: CallService.kt
app/src/main/java/com/telcobright/sipphone/statemachine/: FluentBuilder.kt  GenericStateMachine.kt  StateConfig.kt  StateMachineEvent.kt  StateMachineRegistry.kt
app/src/main/java/com/telcobright/sipphone/ui/: CallActivity.kt
app/src/main/java/com/telcobright/sipphone/verto/: SdpBuilder.kt  VertoClient.kt
app/src/main/res/drawable/: status_dot.xml
app/src/main/res/layout/: activity_call.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
docs/architecture/: system-architecture.md
docs/configuration/: freeswitch-setup.md  verto-test-setup.md
docs/development/: build-native-libs.md
docs/features/: adaptive-bitrate.md
sip-phone-lib/: pom.xml
sip-phone-lib/src/main/java/com/telcobright/sipphone/bus/: EventBus.java
sip-phone-lib/src/main/java/com/telcobright/sipphone/call/: CallData.java  CallVolatileContext.java
sip-phone-lib/src/main/java/com/telcobright/sipphone/call/events/: CallEvents.java
sip-phone-lib/src/main/java/com/telcobright/sipphone/media/: IceConfig.java  PcmuCodec.java  PcmuRtpSession.java  RtpPacket.java
sip-phone-lib/src/main/java/com/telcobright/sipphone/phone/: AdaptiveBitrateController.java  AmrModeChangeEvent.java  CallContext.java  CallEvent.java  CallLogger.java  CallMachine.java  CallRequest.java  CallRouter.java  CallRuntimeContext.java  MediaHandler.java  PhoneCommand.java  PhoneController.java  PhoneEngine.java  PhoneState.java  RouteEvent.java  RtcpStatsEvent.java  UiAction.java  UiStateMachine.java  UiViewModel.java
sip-phone-lib/src/main/java/com/telcobright/sipphone/phone/call/: CallMachineEvent.java  CallMachineFactory.java  CallMachineRegistry.java
sip-phone-lib/src/main/java/com/telcobright/sipphone/protocol/: ProtocolType.java  RouteSignalingBridge.java  SignalingAdapter.java  SignalingBridge.java  SignalingResult.java  VertoRouteSignalingBridge.java  VertoSignalingAdapter.java  VertoSignalingBridge.java
sip-phone-lib/src/main/java/com/telcobright/sipphone/route/: RouteStatus.java
sip-phone-lib/src/main/java/com/telcobright/sipphone/route/health/: HeartbeatMode.java  RouteConfig.java  RouteConnectionHandler.java  RouteHealthContext.java  RouteHealthEntity.java  RouteHealthEvent.java  RouteHealthEventType.java  RouteHealthMachineFactory.java  RouteHealthRegistry.java
sip-phone-lib/src/main/java/com/telcobright/sipphone/route/health/impl/: VertoRouteConnectionHandler.java
sip-phone-lib/src/main/java/com/telcobright/sipphone/statemachine/: FluentBuilder.java  GenericEvent.java  GenericStateMachine.java  StateConfig.java  StateMachineEvent.java  StateMachineRegistry.java  TimeoutEvent.java
sip-phone-lib/src/main/java/com/telcobright/sipphone/verto/: SdpBuilder.java  VertoClient.java
sip-phone-linux/: dependency-reduced-pom.xml  pom.xml
sip-phone-linux/native/: Makefile
sip-phone-linux/native/include/pjmedia/pj/: config_site.h
sip-phone-linux/native/include/pjmedia/pj/compat/: os_auto.h
sip-phone-linux/native/include/pjmedia/pjmedia/: config_auto.h
sip-phone-linux/native/include/pjmedia/pjmedia-codec/: config_auto.h
sip-phone-linux/native/src/amr/: amr_codec.c  amr_codec.h
sip-phone-linux/native/src/codec/: pcmu_codec.c  pcmu_codec.h
sip-phone-linux/native/src/compat/: android_log_compat.h
sip-phone-linux/native/src/compat/android/: log.h
sip-phone-linux/native/src/jni/: jni_bridge.c  jni_ice_bridge.c
sip-phone-linux/native/src/rtp/: amr_rtp_payload.c  amr_rtp_payload.h  ice_transport.c  ice_transport.h  jitter_buffer.c  rtcp_handler.c  rtp_packet.h  rtp_session.c  rtp_session.h  rtp_transport.h  rtp_transport_pjmedia.c  rtp_transport_registry.c  rtp_transport_simple.c
sip-phone-linux/src/main/java/com/telcobright/sipphone/linux/: SipPhoneMain.java
sip-phone-linux/src/main/java/com/telcobright/sipphone/linux/diag/: RtpDiagnostic.java
sip-phone-linux/src/main/java/com/telcobright/sipphone/linux/media/: AmrAudioEngine.java  JavaSoundAudioEngine.java  LinuxMediaHandler.java  NativeIceBridge.java  NativeMediaBridge.java  PcmuAudioEngine.java
sip-phone-linux/src/main/java/com/telcobright/sipphone/linux/settings/: AppSettings.java
sip-phone-linux/src/main/java/com/telcobright/sipphone/linux/ui/: SipPhoneFrame.java
sip-phone-linux/src/main/resources/: logback.xml
